feat: add observation stats by sites
