# backend/docs/swagger.json
@@ -302,6 +302,69 @@
                 }
             }
         },
+        "/stats/observations/sites": {
+            "get": {
+                "description": "Observation stats group by sites",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "statistics"
+                ],
+                "summary": "Observation stats group by sites",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "description": "Search start from",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "description": "Search start from",
+                        "name": "to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Filter by site block",
+                        "name": "block",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by site code",
+                        "name": "site_code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by taxa",
+                        "name": "taxa",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by species common_name",
+                        "name": "common_name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/stats.ObservationBySitesResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/stats/observations/timeseries": {
             "get": {
                 "description": "Observation time series",
@@ -629,6 +692,17 @@
                 }
             }
         },
+        "stats.ObservationBySitesResponse": {
+            "type": "object",
+            "properties": {
+                "sites": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/stats.SiteResponse"
+                    }
+                }
+            }
+        },
         "stats.ObservationOverviewResponse": {
             "type": "object",
             "properties": {
@@ -645,7 +719,7 @@
                 "observation_count": {
                     "type": "integer"
                 },
-                "total_species_count": {
+                "species_count": {
                     "type": "integer"
                 }
             }
@@ -661,6 +735,20 @@
                             "$ref": "#/definitions/stats.TimeSeriesPoint"
                         }
                     }
+                }
+            }
+        },
+        "stats.SiteResponse": {
+            "type": "object",
+            "properties": {
+                "observation_count": {
+                    "type": "integer"
+                },
+                "site_code": {
+                    "type": "string"
+                },
+                "species_count": {
+                    "type": "integer"
                 }
             }
         },
@@ -706,11 +794,14 @@
         "stats.TimeSeriesPoint": {
             "type": "object",
             "properties": {
+                "observation_count": {
+                    "type": "integer"
+                },
+                "species_count": {
+                    "type": "integer"
+                },
                 "timestamp": {
                     "type": "string"
-                },
-                "value": {
-                    "type": "integer"
                 }
             }
         }
