# backend/internal/stats/model.go
@@ -18,3 +18,13 @@ type ObservationStatsInput struct {
 	Taxa       *db.Taxa `form:"taxa"`
 	CommonName *string  `form:"common_name"`
 }
+
+type ObservationStats struct {
+	ObservationCount int64 `json:"observation_count"`
+	SpeciesCount     int64 `json:"species_count"`
+}
+
+type TimeSeriesPoint struct {
+	Timestamp string `json:"timestamp"`
+	ObservationStats
+}
